--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://akram:akram@cluster0.ousg8.mongodb.net/
+MONGO_URI=mongodb+srv://<VOTRE USERNAME>:<VOTRE PASSWORD>@cluster0.ousg8.mongodb.net/
 SECRET_KEY=supersecretkey
